<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textCapSentences"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:text=""
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"

            app:met_baseColor="@color/colorPrimary"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorPrimary" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:text=""
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"

            app:met_baseColor="@color/colorPrimary"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorPrimary" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:text=""
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"

            app:met_baseColor="@color/colorPrimary"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/departure"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/depart"
                android:inputType="time"
                android:text=""
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:maxLength="5"

                app:met_baseColor="@color/colorPrimary"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@color/colorPrimary" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/arrival"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/arrivee"
                android:inputType="time"
                android:text=""
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:maxLength="5"

                app:met_baseColor="@color/colorPrimary"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@color/colorPrimary" />

        </LinearLayout>


        <!--<com.rengwuxian.materialedittext.MaterialEditText-->
            <!--android:id="@+id/sdestinationAddress"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="20dp"-->
            <!--android:hint="@string/destination_address"-->
            <!--android:inputType="textPostalAddress"-->
            <!--android:text=""-->
            <!--android:textColor="@color/colorPrimary"-->
            <!--android:textSize="20sp"-->

            <!--app:met_baseColor="@color/colorPrimary"-->
            <!--app:met_floatingLabel="highlight"-->
            <!--app:met_primaryColor="@color/colorPrimary" />-->

    </LinearLayout>

</android.support.v7.widget.CardView>