<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frameMap">

<fragment xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/map"
    class="com.google.android.gms.maps.MapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.MainActivity" >
</fragment>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple_route"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/lbl_depart"
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/depart"
            android:textSize="15sp"/>

        <!--<TextView-->
            <!--android:id="@+id/lbl_arrival"-->
            <!--android:layout_margin="10dp"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/arrivee"-->
            <!--android:layout_below="@id/lbl_depart"-->
            <!--android:textSize="20sp"/>-->

        <fragment
            android:id="@+id/destinationAddress"
            android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_below="@id/lbl_depart"
            android:hint="@string/destination_address"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </RelativeLayout>

    <Button
        android:id="@+id/sendPosition"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="15dp"
        android:background="@drawable/ripple_signin"
        android:text="@string/send_your_position"
        android:textColor="@color/backgroundDriver" />

</RelativeLayout>

</FrameLayout>